change practice-employees-app on practice-react-employees

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "practice-employees-app",
+  "name": "practice-react-employees",
   "private": true,
   "version": "0.0.0",
   "type": "module",
